# pii-extractor

./: .gitignore  logs_redacted.txt  main.py  pyproject.toml  sdlog.py
agents/: log.py  log_generator.py
evaluation/: entities.ipynb  evaluate.py
models/: labels.json  log.py  logs.json  logs.py
more_data/: labels-biased.jsonl  labels.jsonl  logs.jsonl
more_data/gliner/: results.jsonl  results.txt
more_data/v1/: labels.jsonl  logs.jsonl
pii_model/: config.json
results/: gliner.md
sdlog_main/: config.json
sdlog_net/: config.json
